[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/levels/Cave - Platforms.png" type="Texture" id=1]
[ext_resource path="res://scenes/models/PlatformTrap.gd" type="Script" id=2]
[ext_resource path="res://scenes/models/level objects/wall_peaks.tscn" type="PackedScene" id=4]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -71.7076, -2.97953 )
b = Vector2( 47.0047, -2.97953 )

[node name="PlatformTrap" type="KinematicBody2D"]
position = Vector2( -1.78179, 3.11814 )
z_index = -7
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.28179, -10.631 )
scale = Vector2( 0.3, 0.1 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 236.091, 17.6307, 389.604, 187.01 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9.65559, -25.0755 )
z_index = 2
shape = SubResource( 1 )
one_way_collision = true

[node name="PlatformTrapTimer" type="Timer" parent="."]
wait_time = 1.2

[node name="trap" parent="." instance=ExtResource( 4 )]
position = Vector2( -28.4655, -28.8204 )
z_index = -1

[node name="trap2" parent="." instance=ExtResource( 4 )]
position = Vector2( 25.9619, -28.8055 )
z_index = -2
[connection signal="timeout" from="PlatformTrapTimer" to="." method="_on_PlatformTrapTimer_timeout"]
